- API: Common uses its own set of DockThemes
- Bugfix: EclipseTheme Shaped/RectGradientPaint did not do "doLayout" correct, the effect was that some buttons got too small
- API: LookAndFeel changes noted by DockController and forwarded to all UIListeners
- Bugfix: Memoryleak in FlatTab and BubbleStackDockComponent
- Bugfix: StateManager did not store the old location of a Dockable that was maximized, but not registered, when working with XML files
- API: new buttons for the EclipseTheme
! API: XElement now extends XContainer, and no longer XAttribute. XAttribute extends XContainer as well.
- Layout: New set of icons for EclipseTheme
- Layout: Icons of BubbleTheme replaced by LGPL 2.1 compatible images
- API: CDockables can now request a size they would like to have, and in most environments they will get this size
! API: DockFactories can now create any Object they want, and are no longer required to create DockLayouts. DockLayout has been converted into a class that wraps the Object that was created by a DockFactory

[v1.0.4]
- Bugfix: BubbleDisplayer did not calculate its "getDockableInsets" correctly. A flaw in the design of BasicDockableDisplayer caused the failure.
! API: almost everyone that uses a Input/OutputStream now writes the version number into the stream. This will help to implement backwards compatibility. This should be the last break in the file format.
! API: DockableListener has an additional method "titleExchanged" which can be used to exchange a DockTitle.
! API: CDockable and subclasses can now hide or show their titles at any time.
- Layout: BubbleDisplayer now shows a border if the title is not null, or if the dockable is not a station
- API: PredefinedDockSituation can use backup factories for elements that are missing in the cache. DockFrontend supports these backup factories as well, Dockables read by the backup-factory are automatically added to the frontend.
- API: DockFactories can now be unregistered from DockFrontend  